--- a/app/public/index.html
+++ b/app/public/index.html
@@ -32,7 +32,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+            <p><a href="/api/matches">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup">GitHub Repo</a></p>
         </div>
     </footer>
 
