comment - need to look into Chosen Plugin more if time permits

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -12,7 +12,7 @@
     <!-- Font Awesome Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
-    <!-- Chosen -->
+    <!-- Chosen jQuery Plugin (Make selects easier to manage) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
 
@@ -200,7 +200,7 @@
 
 <script type="text/javascript">
 
-    // Chosen CSS
+    // Chosen jQuery Plugin stuff
     var config = {
         '.chosen-select'           : {},
         '.chosen-select-deselect'  : {allow_single_deselect:true},
