--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -38,7 +38,7 @@
         <h3><strong>Question 1</strong></h3>
         <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
         <!-- * Numbers associated with user choice || id associated with question number-->
-        <select data-placeholder="" class="chosen-select" id="q1">
+        <select data-placeholder="" class="chosen-select" id="q1" style="width:350px;" >
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
@@ -198,9 +198,30 @@
         </div>
     </div>
 
+    <!-- Modal -->
+    <div id="alertModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h2 class="modal-title"><strong>Warning</strong></h2>
+                </div>
+                <div class="modal-body">
+                    <h2>Please fill out all fields before submitting!</h2>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 <script type="text/javascript">
 
-    // Chosen jQuery Plugin stuff
+    // Chosen jQuery Plugin CSS
     var config = {
         '.chosen-select'           : {},
         '.chosen-select-deselect'  : {allow_single_deselect:true},
@@ -267,7 +288,8 @@
         }
         else
         {
-            alert("Please fill out all fields before submitting!");
+//            alert("Please fill out all fields before submitting!");
+            $("#alertModal").modal('toggle');
         }
 
         return false;
