--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -170,7 +170,7 @@
         <hr>
         <footer class="footer">
             <div class="container">
-                <p><a href="/api/matches">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup">GitHub Repo</a></p>
+                <p><a href="/api/matches" target="_blank">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup" target="_blank">GitHub Repo</a></p>
             </div>
         </footer>
 
