finished styling index

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FriendFinder</title>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <title>Matchup</title>
 
     <!-- Latest compiled and minified CSS & JS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -12,32 +14,56 @@
     <!-- Font Awesome Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
+    <!-- Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
 
-<div class="container">
+<!--&lt;!&ndash;Initial Commit&ndash;&gt;-->
+<!--<div class="container">-->
 
-    <div class="jumbotron">
-        <h1 class=""><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>
-        <hr>
-        <h2 class="">Answer a few basic questions. </h2>
-        <h2 class="">Then find the friend with the greatest compatibility!</h2>
+    <!--<div class="jumbotron">-->
+        <!--<h1 class=""><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>-->
+        <!--<hr>-->
+        <!--<h2 class="">Answer a few basic questions. </h2>-->
+        <!--<h2 class="">Then find the friend with the greatest compatibility!</h2>-->
+        <!--<br>-->
+
+        <!--<div class="">-->
+            <!--<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>-->
+        <!--</div>-->
+
+    <!--</div>-->
+
+    <!--<footer class="footer">-->
+        <!--<div class="container">-->
+            <!--<p><a href="/api/matches" target="_blank">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup" target="_blank">GitHub Repo</a></p>-->
+        <!--</div>-->
+    <!--</footer>-->
+
+<!--</div>-->
+
+<div class="homepage-outercontainer container">
+
+    <div class="homepage-innercontainer">
+        <img src="img/logoimg.png">
+        <!--<hr>-->
+        <h3 class="">Answer a few basic questions. </h3>
+        <h3 class="">Then find the match with the greatest compatibility!</h3>
         <br>
 
         <div class="">
             <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
         </div>
 
+        <footer class="footer">
+            <div class="container">
+                <p><a href="/api/matches" target="_blank">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup" target="_blank">GitHub Repo</a></p>
+            </div>
+        </footer>
     </div>
-
-    <footer class="footer">
-        <div class="container">
-            <p><a href="/api/matches" target="_blank">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup" target="_blank">GitHub Repo</a></p>
-        </div>
-    </footer>
-
 </div>
-
 
 </body>
 </html>
