--- a/app/public/index.html
+++ b/app/public/index.html
@@ -20,49 +20,25 @@
 </head>
 <body>
 
-<!--&lt;!&ndash;Initial Commit&ndash;&gt;-->
-<!--<div class="container">-->
+    <div class="hmpg-outer-wrapper">
 
-    <!--<div class="jumbotron">-->
-        <!--<h1 class=""><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>-->
-        <!--<hr>-->
-        <!--<h2 class="">Answer a few basic questions. </h2>-->
-        <!--<h2 class="">Then find the friend with the greatest compatibility!</h2>-->
-        <!--<br>-->
+        <div class="hmpg-inner-wrapper text-center">
+            <img src="img/logoimg.png">
+            <h3 class="">Answer a few basic questions. </h3>
+            <h3 class="">Then find the match with the greatest compatibility!</h3>
+            <br>
 
-        <!--<div class="">-->
-            <!--<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>-->
-        <!--</div>-->
-
-    <!--</div>-->
-
-    <!--<footer class="footer">-->
-        <!--<div class="container">-->
-            <!--<p><a href="/api/matches" target="_blank">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup" target="_blank">GitHub Repo</a></p>-->
-        <!--</div>-->
-    <!--</footer>-->
-
-<!--</div>-->
-
-<div class="homepage-outercontainer container">
-
-    <div class="homepage-innercontainer">
-        <img src="img/logoimg.png">
-        <h3 class="">Answer a few basic questions. </h3>
-        <h3 class="">Then find the match with the greatest compatibility!</h3>
-        <br>
-
-        <div class="">
-            <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
-        </div>
-
-        <footer class="footer">
-            <div class="container">
-                <p><a href="/api/matches" target="_blank">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup" target="_blank">GitHub Repo</a></p>
+            <div class="">
+                <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
             </div>
-        </footer>
+
+            <footer class="footer">
+                <div class="container">
+                    <p><a href="/api/matches" target="_blank">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup" target="_blank">GitHub Repo</a></p>
+                </div>
+            </footer>
+        </div>
     </div>
-</div>
 
 </body>
 </html>
