--- a/app/public/index.html
+++ b/app/public/index.html
@@ -14,6 +14,9 @@
     <!-- Font Awesome Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Sansita:700i" rel="stylesheet">
+
     <!-- Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 
@@ -23,13 +26,13 @@
     <div class="hmpg-outer-wrapper">
 
         <div class="hmpg-inner-wrapper text-center">
-            <img src="img/logoimg.png">
+            <img src="img/logoimglarge.png">
             <h3 class="">Answer a few basic questions. </h3>
             <h3 class="">Then find the match with the greatest compatibility!</h3>
             <br>
 
             <div class="">
-                <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
+                <a href="/survey" class="test"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
             </div>
 
             <footer class="footer">
