--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -233,13 +233,13 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h2 class="modal-title"><strong>Warning</strong></h2>
+                    <h2 class="modal-title"><strong>WARNING</strong></h2>
                 </div>
                 <div class="modal-body">
                     <h2>Please fill out all fields before submitting!</h2>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default modalbutton" data-dismiss="modal">Close</button>
                 </div>
             </div>
 
