--- a/app/public/index.html
+++ b/app/public/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sansita:700i" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link href="/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
 </head>
 <body>
