--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sansita:700i" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 
 </head>
 <body>
