tried using path <link href="/css/style.css" rel="stylesheet"> || no luck

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -22,7 +22,8 @@
     <link href="https://fonts.googleapis.com/css?family=Sansita:700i" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link href="../css/style.css" rel="stylesheet">
+    <!--<link href="../css/style.css" rel="stylesheet">-->
+    <link href="/css/style.css" rel="stylesheet">
 
 </head>
 <body>
