--- a/app/public/index.html
+++ b/app/public/index.html
@@ -19,7 +19,7 @@
 
     <!-- Stylesheet -->
     <!--<link href="css/style.css" rel="stylesheet">-->
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 
 </head>
 <body>
