--- a/app/public/index.html
+++ b/app/public/index.html
@@ -18,7 +18,6 @@
     <link href="https://fonts.googleapis.com/css?family=Sansita:700i" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <!--<link href="css/style.css" rel="stylesheet">-->
     <link href="./css/style.css" rel="stylesheet">
 
 </head>
@@ -33,7 +32,7 @@
             <br>
 
             <div class="">
-                <a href="/survey" class="test"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
+                <a href="/survey" class="redbar-styleonly"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
             </div>
 
             <footer class="footer">
