--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Sansita:700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet">
 
     <!-- Stylesheet -->
     <link href="./css/style.css" rel="stylesheet">
@@ -32,10 +32,10 @@
             <br>
 
             <div class="">
-                <a href="/survey" class="redbar-styleonly"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
+                <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
             </div>
 
-            <footer class="footer">
+            <footer>
                 <div class="container">
                     <p><a href="/api/matches" target="_blank">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup" target="_blank">GitHub Repo</a></p>
                 </div>
