--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -19,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Sansita:700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet">
 
     <!-- Stylesheet -->
     <link href="./css/style.css" rel="stylesheet">
@@ -32,7 +32,7 @@
             <div class="question-main-wrapper">
 
                 <div class="header text-center">
-                    <img src="img/logoimgsmall.png">
+                    <img src="img/logoimgsmall.png" id="logo-small-img">
                     <h3>Survey Questions</h3>
                 </div>
 
@@ -44,8 +44,9 @@
 
                     <h4 class="surveyh4">Link to Photo Image (Required)</h4>
                     <!-- Get User photo -->
-                    <input type="text" name="" id="photo" class="form-control" required data-toggle="tooltip" data-placement="left" title="For Demo just enter in any random text - you do NOT need a url">
+                    <input type="text" name="" id="photo" class="form-control" required data-toggle="tooltip" data-placement="bottom" title="For Demo just enter in any random text - you do NOT need to enter a valid URL">
                 </div>
+
                 <div class="redbar-styleonly"></div>
 
                 <div class="question-wrapper">
@@ -196,10 +197,8 @@
                     <a href=""><button type="submit" class="btn btn-lg btn-primary" id="submit"><h4><span class="glyphicon glyphicon-list-alt"></span> Submit Survey</h4></button></a>
                 </div>
 
-                <footer class="footer">
-                    <div class="container">
-                        <p><a href="/api/matches" target="_blank">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup" target="_blank">GitHub Repo</a></p>
-                    </div>
+                <footer class="text-center">
+                    <p><a href="/api/matches" target="_blank">API Matches List</a> | <a href="https://github.com/NBDelpino1/matchup" target="_blank">GitHub Repo</a></p>
                 </footer>
                 <!-- Stays together -->
             </div>
@@ -215,9 +214,9 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h2 class="modal-title"><strong>Best Match</strong></h2>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body result-modal-body">
                     <h2 id="matchName"></h2>
-                    <img id="matchImg" src="" alt="">
+                    <img id="matchImg" src="" alt="best match face" class="img-responsive">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default modalbutton" data-dismiss="modal">Close</button>
