--- a/app/public/index.html
+++ b/app/public/index.html
@@ -20,6 +20,10 @@
     <!-- Stylesheet -->
     <link href="./css/style.css" rel="stylesheet">
 
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i');
+    </style>
+
 </head>
 <body>
 
