--- a/app/public/index.html
+++ b/app/public/index.html
@@ -16,7 +16,7 @@
 
     <!-- Google Fonts -->
     <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet">-->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet" type="text/css">
 
     <!-- Stylesheet -->
     <link href="./css/style.css" rel="stylesheet">
