--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet">-->
 
     <!-- Stylesheet -->
     <link href="./css/style.css" rel="stylesheet">
