included google fonts link

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -19,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
 
     <!-- Google Fonts -->
-    <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet">
 
     <!-- Stylesheet -->
     <link href="./css/style.css" rel="stylesheet">
