made minor style changes

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -26,7 +26,8 @@
     <div class="hmpg-outer-wrapper">
 
         <div class="hmpg-inner-wrapper text-center">
-            <img src="img/logoimglarge.png">
+            <img src="img/logo-large.png">
+            <!--<img src="img/logo.png">-->
             <h3 class="">Answer a few basic questions. </h3>
             <h3 class="">Then find the match with the greatest compatibility!</h3>
             <br>
