--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -32,7 +32,7 @@
             <div class="question-main-wrapper">
 
                 <div class="header text-center">
-                    <img src="img/logoimgsmall.png" id="logo-small-img">
+                    <img src="img/logo-small.png" id="logo-small-img">
                     <h3>Survey Questions</h3>
                 </div>
 
