--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -247,5 +247,10 @@
     </div>
     <!-- My Scripts -->
     <script src="./app.js"></script>
+<script>
+    $('html, body').stop().animate({
+        scrollTop: element.offset().top
+    }, 1000);
+</script>
 </body>
 </html>
