--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -5,22 +5,17 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Matchup</title>
-
     <!-- Latest compiled and minified CSS & JS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
     <!-- Font Awesome Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-
     <!-- Chosen jQuery Plugin (Make selects easier to manage) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
-
     <!-- Google Fonts -->
-    <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet">-->
-
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Sansita:700i" rel="stylesheet">
     <!-- Stylesheet -->
     <link href="./css/style.css" rel="stylesheet">
 
@@ -247,10 +242,5 @@
     </div>
     <!-- My Scripts -->
     <script src="./app.js"></script>
-<script>
-    $('html, body').stop().animate({
-        scrollTop: element.offset().top
-    }, 1000);
-</script>
 </body>
 </html>
